feat(mall): 添加订单配送方式校验与统一处理
- 新增订单配送方式字段用于统一管理
- 实现购物车商品配送方式一致性校验
- 阻止配送方式不同的商品合并下单
- 在订单创建时记录配送方式信息